# system-renting

./: .env.example  .env.prod.example  .gitignore  DOCKER.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.agent/rules/: backend-code-style-guide.md  frontend-code-style-guide.md
.github/workflows/: build-agent.yml
apps/agent/: .env.example  .gitignore  README.md  agent.spec  agent.yaml.example  pyproject.toml
apps/agent/src/distributed_agent/: __init__.py  backend_client.py  config.py  docker_manager.py  hardware.py  main.py  models.py  tunnel.py
apps/backend/: Dockerfile  Dockerfile.dev  package.json
apps/backend/prisma/: schema.prisma
apps/backend/src/: app.module.ts  main.ts
apps/backend/src/config/: env.validation.ts
apps/backend/src/influx/: influx.module.ts  influx.service.ts
apps/backend/src/logging/: app-logger.service.ts  logging.module.ts  logging.service.ts
apps/backend/src/prisma/: prisma.service.ts
apps/backend/src/redis/: redis.service.ts
apps/frontend/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  next.config.ts  package.json  tailwind.config.ts
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/hooks/: use-marketplace.ts  use-nodes.ts  (+1 more)
config/: frps.prod.toml  frps.toml
docs/: development_improvement.md  development_prompts.md  technical_design_doc.md
docs/ideas/: Brainstorming-Ideas.md
docs/integrations/: README.md  authentication.md  data-types.md  rest-api.md  websocket-api.md
plans/: agent_prompt.md  backend_prompt.md  frontend_prompt.md
(+44 files in other folders)
